--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@cypress/react": "^9.0.0",
+    "@cypress/vite-dev-server": "^6.0.2",
+    "@cypress/webpack-dev-server": "^4.0.1",
     "@eslint/js": "^9.19.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -40,6 +43,7 @@
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-istanbul": "^3.0.5",
+    "codecov": "^3.8.2",
     "cypress": "^14.0.3",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
@@ -49,6 +53,7 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0",
-    "vitest": "^3.0.5"
+    "vitest": "^3.0.5",
+    "webpack": "^5.98.0"
   }
 }
